# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdr_tools"
version = "0.5.0"
description = "A set of tool to interact with EEA Reportnet 2 API. It included CLI tools and supporting library"
readme = "README.md"
authors = [{ name = "Luca Liberti", email = "aa@aa.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["EEA", "cli"]
dependencies = [
    "certifi >= 2022.6.15",
    "charset-normalizer >= 2.1.0",
    "click >= 8.1.3",
    "idna >= 3.3",
    "lxml >= 4.9.1",
    "requests >= 2.28.1",
    "tabulate >= 0.8.10",
    "urllib3 >= 1.26.9",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/libertil/cdr-tools"

[project.scripts]
cdrtools = "cdr_tools:main"
